Fixing odd stories showing up on wrong feed bug. Also fixed overflow styling issue when resizing.

--- a/media/css/reader.css
+++ b/media/css/reader.css
@@ -120,7 +120,8 @@ a img {
 
 .content-pane {
     display: none;
-    overflow: auto !important;
+    overflow-x: auto !important;
+    overflow-y: hidden !important;
     width: auto !important;
     height: auto !important;
 }
